[package]
name = "webrtc-udp-forwarder"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level=3
debug=0
strip="symbols"
lto=true
panic="abort"
codegen-units=1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.21.7"
bytes = "1.6.0"
chrono = "0.4.38"
compile-time-run = "0.2.12"
core_affinity = "0.8.1"
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
env_logger = "0.10.2"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
hyper = "1.3.1"
lazy_static = "1.4.0"
log = {version="0.4", features=["release_max_level_info"]}
mimalloc = {version="0.1.42", default-features=false}
parking_lot = "0.12.2"
serde = "1.0.202"
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = "1.37.0"
toml = "0.8.13"
uds_windows = "1.1.0"
webrtc =  "0.11.0"
websocket = "0.27.1"
[target.'cfg(target_env="musl")'.dependencies]
openssl = {version = "0.10", features = ["vendored"]}
[target.'cfg(target_os="netbsd")'.dependencies]
openssl = {version = "0.10", features = ["vendored"]}

[patch.crates-io]
webrtc = {path = "webrtc/webrtc/"}

[features]
tcp=[]
uds=[]
default = ["queuemon"]
queuemon = []
